layout bug solved

--- a/Assets/scss/_custom.scss
+++ b/Assets/scss/_custom.scss
@@ -205,7 +205,7 @@ label {
 
 }
 // desktop font-feature-settings
-@media (min-width: 1020px) {
+@media (min-width: 700px) {
   .map-section {
     position: -webkit-sticky; /* Safari */
     position: sticky !important;
